--- a/RewriteWeibo/TableViewCell.xib
+++ b/RewriteWeibo/TableViewCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -45,7 +45,7 @@
                 <outlet property="detailL" destination="A6l-76-gli" id="dc2-8Q-S6W"/>
                 <outlet property="nameL" destination="JVQ-zq-l9k" id="NZV-Bg-2tm"/>
             </connections>
-            <point key="canvasLocation" x="471" y="407.5"/>
+            <point key="canvasLocation" x="549" y="391.5"/>
         </tableViewCell>
     </objects>
 </document>
